deploy/learnbetter-site/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: learnbetter-site
  labels:
    app.kubernetes.io/name: learnbetter-site
